--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <maven.compiler.proc>full</maven.compiler.proc>
 
     <vertx.version>5.0.2</vertx.version>
+    <avaje-config.version>4.1</avaje-config.version>
     <avaje.inject.version>11.6</avaje.inject.version>
     <avaje.jsonb.version>3.6</avaje.jsonb.version>
     <eclipse.yasson.version>3.0.4</eclipse.yasson.version>
@@ -25,7 +26,7 @@
     <junit-jupiter.version>5.9.1</junit-jupiter.version>
     <rest-assured.version>5.5.6</rest-assured.version>
 
-    <main.verticle>co.selim.vertx_avaje_inject.WebApplication</main.verticle>
+    <main.verticle>co.selim.vertx_avaje_inject.Application</main.verticle>
   </properties>
 
   <dependencyManagement>
@@ -48,6 +49,11 @@
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-config</artifactId>
+      <version>${avaje-config.version}</version>
     </dependency>
     <dependency>
       <groupId>io.avaje</groupId>
