--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <avaje-config.version>4.1</avaje-config.version>
     <avaje.inject.version>11.6</avaje.inject.version>
     <avaje.jsonb.version>3.6</avaje.jsonb.version>
+    <avaje-validator.version>2.13</avaje-validator.version>
     <eclipse.yasson.version>3.0.4</eclipse.yasson.version>
     <slf4j.version>2.0.17</slf4j.version>
     <junit-jupiter.version>5.9.1</junit-jupiter.version>
@@ -90,6 +91,23 @@
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-validator</artifactId>
+      <version>${avaje-validator.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-validator-constraints</artifactId>
+      <version>${avaje-validator.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-validator-generator</artifactId>
+      <version>${avaje-validator.version}</version>
+      <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
 
     <dependency>
       <groupId>io.vertx</groupId>
@@ -122,7 +140,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <release>17</release>
+          <release>21</release>
         </configuration>
       </plugin>
       <plugin>
