--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
     <slf4j.version>2.0.17</slf4j.version>
     <junit-jupiter.version>5.9.1</junit-jupiter.version>
     <rest-assured.version>5.5.6</rest-assured.version>
+    <jte.version>3.2.1</jte.version>
+    <dart-sass-maven-plugin.version>1.5.0</dart-sass-maven-plugin.version>
 
     <main.verticle>co.selim.vertx_avaje_inject.Application</main.verticle>
   </properties>
@@ -108,6 +110,11 @@
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>gg.jte</groupId>
+      <artifactId>jte</artifactId>
+      <version>${jte.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>io.vertx</groupId>
@@ -137,10 +144,55 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>io.github.cleydyr</groupId>
+        <artifactId>dart-sass-maven-plugin</artifactId>
+        <version>${dart-sass-maven-plugin.version}</version>
+        <configuration>
+          <version>1.90.0</version>
+          <inputFolder>src/main/resources/web</inputFolder>
+          <outputFolder>${project.build.outputDirectory}/styles</outputFolder>
+        </configuration>
+        <executions>
+          <execution>
+            <id>generate-css-using-sass</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>compile-sass</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>gg.jte</groupId>
+        <artifactId>jte-maven-plugin</artifactId>
+        <version>${jte.version}</version>
+        <configuration>
+          <sourceDirectory>${project.basedir}/src/main/resources/web</sourceDirectory>
+          <targetDirectory>${project.build.directory}/jte-classes</targetDirectory>
+          <contentType>Html</contentType>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
           <release>21</release>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <mainClass>${main.verticle}</mainClass>
         </configuration>
       </plugin>
       <plugin>
